autoreformatted all oo tests, fixed l10n, applied small ide suggestions