@@ -6,7 +6,6 @@ import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -118,10 +117,10 @@ class OOBibStyleTest {
                                                        String pageInfoQ,
                                                        boolean isFirstAppearanceOfSource) {
         return OOBibStyleTestHelper.makeCitationMarkerEntry(entry,
-                                                            database,
-                                                            uniqueLetterQ,
-                                                            pageInfoQ,
-                                                            isFirstAppearanceOfSource);
+                database,
+                uniqueLetterQ,
+                pageInfoQ,
+                isFirstAppearanceOfSource);
     }
 
     /*
@@ -136,12 +135,12 @@ class OOBibStyleTest {
                                      Boolean[] isFirstAppearanceOfSource,
                                      String[] pageInfo) {
         return OOBibStyleTestHelper.getCitationMarker2(style,
-                                                       entries,
-                                                       entryDBMap,
-                                                       inParenthesis,
-                                                       uniquefiers,
-                                                       isFirstAppearanceOfSource,
-                                                       pageInfo);
+                entries,
+                entryDBMap,
+                inParenthesis,
+                uniquefiers,
+                isFirstAppearanceOfSource,
+                pageInfo);
     }
 
     static String getCitationMarker2b(OOBibStyle style,
@@ -152,12 +151,12 @@ class OOBibStyleTest {
                                       Boolean[] isFirstAppearanceOfSource,
                                       String[] pageInfo) {
         return OOBibStyleTestHelper.getCitationMarker2b(style,
-                                                        entries,
-                                                        entryDBMap,
-                                                        inParenthesis,
-                                                        uniquefiers,
-                                                        isFirstAppearanceOfSource,
-                                                        pageInfo);
+                entries,
+                entryDBMap,
+                inParenthesis,
+                uniquefiers,
+                isFirstAppearanceOfSource,
+                pageInfo);
     }
 
     /*
@@ -168,15 +167,15 @@ class OOBibStyleTest {
     void testGetNumCitationMarker() throws IOException {
         OOBibStyle style = new OOBibStyle(StyleLoader.DEFAULT_NUMERICAL_STYLE_PATH,
                 layoutFormatterPreferences);
-        assertEquals("[1] ", runGetNumCitationMarker2a(style, Arrays.asList(1), -1, true));
+        assertEquals("[1] ", runGetNumCitationMarker2a(style, List.of(1), -1, true));
 
-        assertEquals("[1]", runGetNumCitationMarker2a(style, Arrays.asList(1), -1, false));
+        assertEquals("[1]", runGetNumCitationMarker2a(style, List.of(1), -1, false));
         assertEquals("[1]", runGetNumCitationMarker2b(style, -1, numEntry("key", 1, null)));
 
-        assertEquals("[1] ", runGetNumCitationMarker2a(style, Arrays.asList(1), 0, true));
+        assertEquals("[1] ", runGetNumCitationMarker2a(style, List.of(1), 0, true));
 
         CitationMarkerNumericEntry e2 = numEntry("key", 1, "pp. 55-56");
-        assertEquals(true, e2.getPageInfo().isPresent());
+        assertTrue(e2.getPageInfo().isPresent());
         assertEquals("pp. 55-56", e2.getPageInfo().get().toString());
 
         OOBibStyleTestHelper.testGetNumCitationMarkerExtra(style);
@@ -189,45 +188,45 @@ class OOBibStyleTest {
 
         // unresolved citations look like [??key]
         assertEquals("[" + OOBibStyle.UNDEFINED_CITATION_MARKER + "key" + "]",
-                     runGetNumCitationMarker2b(style, 1,
-                                               numEntry("key", 0, null)));
+                runGetNumCitationMarker2b(style, 1,
+                        numEntry("key", 0, null)));
 
         // pageInfo is shown for unresolved citations
         assertEquals("[" + OOBibStyle.UNDEFINED_CITATION_MARKER + "key" + "; p1]",
-                     runGetNumCitationMarker2b(style, 1,
-                                               numEntry("key", 0, "p1")));
+                runGetNumCitationMarker2b(style, 1,
+                        numEntry("key", 0, "p1")));
 
         // unresolved citations sorted to the front
         assertEquals("[" + OOBibStyle.UNDEFINED_CITATION_MARKER + "key" + "; 2-4]",
-                     runGetNumCitationMarker2b(style, 1,
-                                               numEntry("x4", 4, ""),
-                                               numEntry("x2", 2, ""),
-                                               numEntry("x3", 3, ""),
-                                               numEntry("key", 0, "")));
+                runGetNumCitationMarker2b(style, 1,
+                        numEntry("x4", 4, ""),
+                        numEntry("x2", 2, ""),
+                        numEntry("x3", 3, ""),
+                        numEntry("key", 0, "")));
 
         assertEquals("[" + OOBibStyle.UNDEFINED_CITATION_MARKER + "key" + "; 1-3]",
-                     runGetNumCitationMarker2b(style, 1,
-                                               numEntry("x1", 1, ""),
-                                               numEntry("x2", 2, ""),
-                                               numEntry("y3", 3, ""),
-                                               numEntry("key", 0, "")));
+                runGetNumCitationMarker2b(style, 1,
+                        numEntry("x1", 1, ""),
+                        numEntry("x2", 2, ""),
+                        numEntry("y3", 3, ""),
+                        numEntry("key", 0, "")));
 
         // multiple unresolved citations are not collapsed
         assertEquals("["
-                     + OOBibStyle.UNDEFINED_CITATION_MARKER + "x1" + "; "
-                     + OOBibStyle.UNDEFINED_CITATION_MARKER + "x2" + "; "
-                     + OOBibStyle.UNDEFINED_CITATION_MARKER + "x3" + "]",
-                     runGetNumCitationMarker2b(style, 1,
-                                               numEntry("x1", 0, ""),
-                                               numEntry("x2", 0, ""),
-                                               numEntry("x3", 0, "")));
+                        + OOBibStyle.UNDEFINED_CITATION_MARKER + "x1" + "; "
+                        + OOBibStyle.UNDEFINED_CITATION_MARKER + "x2" + "; "
+                        + OOBibStyle.UNDEFINED_CITATION_MARKER + "x3" + "]",
+                runGetNumCitationMarker2b(style, 1,
+                        numEntry("x1", 0, ""),
+                        numEntry("x2", 0, ""),
+                        numEntry("x3", 0, "")));
 
         /*
          * BIBLIOGRAPHY
          */
         CitationMarkerNumericBibEntry x = numBibEntry("key", Optional.empty());
         assertEquals("[" + OOBibStyle.UNDEFINED_CITATION_MARKER + "key" + "] ",
-                     style.getNumCitationMarkerForBibliography(x).toString());
+                style.getNumCitationMarkerForBibliography(x).toString());
     }
 
     @Test
@@ -270,22 +269,22 @@ class OOBibStyleTest {
         assertEquals(-1, style.getMaxAuthorsFirst());
 
         assertEquals("[Boström et al., 2006]",
-                     getCitationMarker2(style,
-                                        Collections.singletonList(entry), entryDBMap,
-                                        true, null, null, null));
+                getCitationMarker2(style,
+                        Collections.singletonList(entry), entryDBMap,
+                        true, null, null, null));
 
         assertEquals("Boström et al. [2006]",
-                     getCitationMarker2(style,
-                                        Collections.singletonList(entry), entryDBMap,
-                                        false, null, new Boolean[]{false}, null));
+                getCitationMarker2(style,
+                        Collections.singletonList(entry), entryDBMap,
+                        false, null, new Boolean[] {false}, null));
 
         assertEquals("[Boström, Wäyrynen, Bodén, Beznosov & Kruchten, 2006]",
-                     getCitationMarker2(style,
-                                        Collections.singletonList(entry), entryDBMap,
-                                        true,
-                                        null,
-                                        new Boolean[]{true},
-                                        null));
+                getCitationMarker2(style,
+                        Collections.singletonList(entry), entryDBMap,
+                        true,
+                        null,
+                        new Boolean[] {true},
+                        null));
     }
 
     @Test
@@ -372,8 +371,8 @@ class OOBibStyleTest {
         entryDBMap.put(entry, database);
 
         assertEquals("[JabRef Development Team, 2016]",
-                     getCitationMarker2(style,
-                                        entries, entryDBMap, true, null, null, null));
+                getCitationMarker2(style,
+                        entries, entryDBMap, true, null, null, null));
     }
 
     @Test
@@ -487,12 +486,12 @@ class OOBibStyleTest {
         }
 
         assertEquals("[Beta, 2000; Beta, 2000; Epsilon, 2001]",
-                     getCitationMarker2b(style, entries, entryDBMap, true, null, null, null));
+                getCitationMarker2b(style, entries, entryDBMap, true, null, null, null));
         assertEquals("[Beta, 2000a,b; Epsilon, 2001]",
-                     getCitationMarker2(style, entries, entryDBMap, true,
-                                        new String[]{"a", "b", ""},
-                                        new Boolean[]{false, false, false},
-                                        null));
+                getCitationMarker2(style, entries, entryDBMap, true,
+                        new String[] {"a", "b", ""},
+                        new Boolean[] {false, false, false},
+                        null));
     }
 
     @Test
@@ -529,12 +528,12 @@ class OOBibStyleTest {
         }
 
         assertEquals("Beta [2000]; Beta [2000]; Epsilon [2001]",
-                     getCitationMarker2b(style, entries, entryDBMap, false, null, null, null));
+                getCitationMarker2b(style, entries, entryDBMap, false, null, null, null));
         assertEquals("Beta [2000a,b]; Epsilon [2001]",
-                     getCitationMarker2(style, entries, entryDBMap, false,
-                                        new String[]{"a", "b", ""},
-                                        new Boolean[]{false, false, false},
-                                        null));
+                getCitationMarker2(style, entries, entryDBMap, false,
+                        new String[] {"a", "b", ""},
+                        new Boolean[] {false, false, false},
+                        null));
     }
 
     @Test
@@ -572,10 +571,10 @@ class OOBibStyleTest {
         }
 
         assertEquals("[Beta, 2000a,b,c]",
-                     getCitationMarker2(style, entries, entryDBMap, true,
-                                        new String[]{"a", "b", "c"},
-                                        new Boolean[]{false, false, false},
-                                        null));
+                getCitationMarker2(style, entries, entryDBMap, true,
+                        new String[] {"a", "b", "c"},
+                        new Boolean[] {false, false, false},
+                        null));
     }
 
     @Test
@@ -613,14 +612,14 @@ class OOBibStyleTest {
         }
 
         assertEquals("Beta [2000a,b,c]",
-                     getCitationMarker2(style, entries, entryDBMap, false,
-                                        new String[]{"a", "b", "c"},
-                                        new Boolean[]{false, false, false},
-                                        null));
+                getCitationMarker2(style, entries, entryDBMap, false,
+                        new String[] {"a", "b", "c"},
+                        new Boolean[] {false, false, false},
+                        null));
     }
 
     @Test
-    // TODO: equals only work when initialized from file, not from reader
+        // TODO: equals only work when initialized from file, not from reader
     void testEquals() throws IOException {
         OOBibStyle style1 = new OOBibStyle(StyleLoader.DEFAULT_NUMERICAL_STYLE_PATH,
                 layoutFormatterPreferences);
@@ -630,7 +629,7 @@ class OOBibStyleTest {
     }
 
     @Test
-    // TODO: equals only work when initialized from file, not from reader
+        // TODO: equals only work when initialized from file, not from reader
     void testNotEquals() throws IOException {
         OOBibStyle style1 = new OOBibStyle(StyleLoader.DEFAULT_NUMERICAL_STYLE_PATH,
                 layoutFormatterPreferences);
@@ -675,7 +674,7 @@ class OOBibStyleTest {
         entries.add(entry);
         entryDBMap.put(entry, database);
         assertEquals("von Beta, Epsilon, & Tau, 2016",
-                     getCitationMarker2(style, entries, entryDBMap, true, null, null, null));
+                getCitationMarker2(style, entries, entryDBMap, true, null, null, null));
     }
 
     @Test
@@ -687,7 +686,7 @@ class OOBibStyleTest {
     @Test
     void testGetCitationMarkerJoinFirst() throws IOException {
         OOBibStyle style = new OOBibStyle(StyleLoader.DEFAULT_NUMERICAL_STYLE_PATH,
-                                          layoutFormatterPreferences);
+                layoutFormatterPreferences);
 
         // Question: What should happen if some of the sources is
         // marked as isFirstAppearanceOfSource?
@@ -696,11 +695,11 @@ class OOBibStyleTest {
         // Two entries with identical normalizedMarkers and many authors.
         BibEntry entry1 = new BibEntry()
                 .withField(StandardField.AUTHOR,
-                           "Gustav Bostr\\\"{o}m"
-                           + " and Jaana W\\\"{a}yrynen"
-                           + " and Marine Bod\\'{e}n"
-                           + " and Konstantin Beznosov"
-                           + " and Philippe Kruchten")
+                        "Gustav Bostr\\\"{o}m"
+                                + " and Jaana W\\\"{a}yrynen"
+                                + " and Marine Bod\\'{e}n"
+                                + " and Konstantin Beznosov"
+                                + " and Philippe Kruchten")
                 .withField(StandardField.YEAR, "2006")
                 .withField(StandardField.BOOKTITLE, "A book 1")
                 .withField(StandardField.PUBLISHER, "ACM")
@@ -710,11 +709,11 @@ class OOBibStyleTest {
 
         BibEntry entry2 = new BibEntry()
                 .withField(StandardField.AUTHOR,
-                           "Gustav Bostr\\\"{o}m"
-                           + " and Jaana W\\\"{a}yrynen"
-                           + " and Marine Bod\\'{e}n"
-                           + " and Konstantin Beznosov"
-                           + " and Philippe Kruchten")
+                        "Gustav Bostr\\\"{o}m"
+                                + " and Jaana W\\\"{a}yrynen"
+                                + " and Marine Bod\\'{e}n"
+                                + " and Konstantin Beznosov"
+                                + " and Philippe Kruchten")
                 .withField(StandardField.YEAR, "2006")
                 .withField(StandardField.BOOKTITLE, "A book 2")
                 .withField(StandardField.PUBLISHER, "ACM")
@@ -725,11 +724,11 @@ class OOBibStyleTest {
         // Last Author differs.
         BibEntry entry3 = new BibEntry()
                 .withField(StandardField.AUTHOR,
-                           "Gustav Bostr\\\"{o}m"
-                           + " and Jaana W\\\"{a}yrynen"
-                           + " and Marine Bod\\'{e}n"
-                           + " and Konstantin Beznosov"
-                           + " and Philippe NotKruchten")
+                        "Gustav Bostr\\\"{o}m"
+                                + " and Jaana W\\\"{a}yrynen"
+                                + " and Marine Bod\\'{e}n"
+                                + " and Konstantin Beznosov"
+                                + " and Philippe NotKruchten")
                 .withField(StandardField.YEAR, "2006")
                 .withField(StandardField.BOOKTITLE, "A book 3")
                 .withField(StandardField.PUBLISHER, "ACM")
@@ -747,26 +746,26 @@ class OOBibStyleTest {
         if (true) {
             List<CitationMarkerEntry> citationMarkerEntries = new ArrayList<>();
             CitationMarkerEntry cm1 =
-                makeCitationMarkerEntry(entry1, database, "a", null, true);
+                    makeCitationMarkerEntry(entry1, database, "a", null, true);
             citationMarkerEntries.add(cm1);
             CitationMarkerEntry cm2 =
-                makeCitationMarkerEntry(entry2, database, "b", null, true);
+                    makeCitationMarkerEntry(entry2, database, "b", null, true);
             citationMarkerEntries.add(cm2);
             CitationMarkerEntry cm3 =
-                makeCitationMarkerEntry(entry3, database, "c", null, true);
+                    makeCitationMarkerEntry(entry3, database, "c", null, true);
             citationMarkerEntries.add(cm3);
 
             assertEquals("[Boström, Wäyrynen, Bodén, Beznosov & Kruchten, 2006a,b"
-                         + "; Boström, Wäyrynen, Bodén, Beznosov & NotKruchten, 2006c]",
-                         style.createCitationMarker(citationMarkerEntries,
-                                                    true,
-                                                    NonUniqueCitationMarker.THROWS).toString());
+                            + "; Boström, Wäyrynen, Bodén, Beznosov & NotKruchten, 2006c]",
+                    style.createCitationMarker(citationMarkerEntries,
+                            true,
+                            NonUniqueCitationMarker.THROWS).toString());
 
             assertEquals("Boström, Wäyrynen, Bodén, Beznosov & Kruchten [2006a,b]"
-                         + "; Boström, Wäyrynen, Bodén, Beznosov & NotKruchten [2006c]",
-                         style.createCitationMarker(citationMarkerEntries,
-                                                    false,
-                                                    NonUniqueCitationMarker.THROWS).toString());
+                            + "; Boström, Wäyrynen, Bodén, Beznosov & NotKruchten [2006c]",
+                    style.createCitationMarker(citationMarkerEntries,
+                            false,
+                            NonUniqueCitationMarker.THROWS).toString());
         }
 
         // Without pageInfo, only the first is isFirstAppearanceOfSource.
@@ -775,21 +774,20 @@ class OOBibStyleTest {
         if (true) {
             List<CitationMarkerEntry> citationMarkerEntries = new ArrayList<>();
             CitationMarkerEntry cm1 =
-                makeCitationMarkerEntry(entry1, database, "a", null, true);
+                    makeCitationMarkerEntry(entry1, database, "a", null, true);
             citationMarkerEntries.add(cm1);
             CitationMarkerEntry cm2 =
-                makeCitationMarkerEntry(entry2, database, "b", null, false);
+                    makeCitationMarkerEntry(entry2, database, "b", null, false);
             citationMarkerEntries.add(cm2);
             CitationMarkerEntry cm3 =
-                makeCitationMarkerEntry(entry3, database, "c", null, false);
+                    makeCitationMarkerEntry(entry3, database, "c", null, false);
             citationMarkerEntries.add(cm3);
 
             assertEquals("[Boström, Wäyrynen, Bodén, Beznosov & Kruchten, 2006a,b"
-                         + "; Boström et al., 2006c]",
-                         style.createCitationMarker(citationMarkerEntries,
-                                                    true,
-                                                    NonUniqueCitationMarker.THROWS).toString());
-
+                            + "; Boström et al., 2006c]",
+                    style.createCitationMarker(citationMarkerEntries,
+                            true,
+                            NonUniqueCitationMarker.THROWS).toString());
         }
         // Without pageInfo, only the second is isFirstAppearanceOfSource.
         // The second is not joined, because it is a first appearance, thus
@@ -798,21 +796,21 @@ class OOBibStyleTest {
         if (true) {
             List<CitationMarkerEntry> citationMarkerEntries = new ArrayList<>();
             CitationMarkerEntry cm1 =
-                makeCitationMarkerEntry(entry1, database, "a", null, false);
+                    makeCitationMarkerEntry(entry1, database, "a", null, false);
             citationMarkerEntries.add(cm1);
             CitationMarkerEntry cm2 =
-                makeCitationMarkerEntry(entry2, database, "b", null, true);
+                    makeCitationMarkerEntry(entry2, database, "b", null, true);
             citationMarkerEntries.add(cm2);
             CitationMarkerEntry cm3 =
-                makeCitationMarkerEntry(entry3, database, "c", null, false);
+                    makeCitationMarkerEntry(entry3, database, "c", null, false);
             citationMarkerEntries.add(cm3);
 
             assertEquals("[Boström et al., 2006a"
-                         + "; Boström, Wäyrynen, Bodén, Beznosov & Kruchten, 2006b"
-                         + "; Boström et al., 2006c]",
-                         style.createCitationMarker(citationMarkerEntries,
-                                                    true,
-                                                    NonUniqueCitationMarker.THROWS).toString());
+                            + "; Boström, Wäyrynen, Bodén, Beznosov & Kruchten, 2006b"
+                            + "; Boström et al., 2006c]",
+                    style.createCitationMarker(citationMarkerEntries,
+                            true,
+                            NonUniqueCitationMarker.THROWS).toString());
         }
 
         // Without pageInfo, neither is isFirstAppearanceOfSource.
@@ -822,19 +820,19 @@ class OOBibStyleTest {
         if (true) {
             List<CitationMarkerEntry> citationMarkerEntries = new ArrayList<>();
             CitationMarkerEntry cm1 =
-                makeCitationMarkerEntry(entry1, database, "a", null, false);
+                    makeCitationMarkerEntry(entry1, database, "a", null, false);
             citationMarkerEntries.add(cm1);
             CitationMarkerEntry cm2 =
-                makeCitationMarkerEntry(entry2, database, "b", null, false);
+                    makeCitationMarkerEntry(entry2, database, "b", null, false);
             citationMarkerEntries.add(cm2);
             CitationMarkerEntry cm3 =
-                makeCitationMarkerEntry(entry3, database, "c", null, false);
+                    makeCitationMarkerEntry(entry3, database, "c", null, false);
             citationMarkerEntries.add(cm3);
 
             assertEquals("[Boström et al., 2006a,b,c]",
-                         style.createCitationMarker(citationMarkerEntries,
-                                                    true,
-                                                    NonUniqueCitationMarker.THROWS).toString());
+                    style.createCitationMarker(citationMarkerEntries,
+                            true,
+                            NonUniqueCitationMarker.THROWS).toString());
         }
 
         // With pageInfo: different entries with identical non-null pageInfo: not joined.
@@ -842,21 +840,21 @@ class OOBibStyleTest {
         if (true) {
             List<CitationMarkerEntry> citationMarkerEntries = new ArrayList<>();
             CitationMarkerEntry cm1 =
-                makeCitationMarkerEntry(entry1, database, "a", "p1", false);
+                    makeCitationMarkerEntry(entry1, database, "a", "p1", false);
             citationMarkerEntries.add(cm1);
             CitationMarkerEntry cm2 =
-                makeCitationMarkerEntry(entry2, database, "b", "p1", false);
+                    makeCitationMarkerEntry(entry2, database, "b", "p1", false);
             citationMarkerEntries.add(cm2);
             CitationMarkerEntry cm3 =
-                makeCitationMarkerEntry(entry3, database, "c", "p1", false);
+                    makeCitationMarkerEntry(entry3, database, "c", "p1", false);
             citationMarkerEntries.add(cm3);
 
             assertEquals("[Boström et al., 2006a; p1"
-                         + "; Boström et al., 2006b; p1"
-                         + "; Boström et al., 2006c; p1]",
-                         style.createCitationMarker(citationMarkerEntries,
-                                                    true,
-                                                    NonUniqueCitationMarker.THROWS).toString());
+                            + "; Boström et al., 2006b; p1"
+                            + "; Boström et al., 2006c; p1]",
+                    style.createCitationMarker(citationMarkerEntries,
+                            true,
+                            NonUniqueCitationMarker.THROWS).toString());
         }
 
         // With pageInfo: same entries with identical non-null pageInfo: collapsed.
@@ -865,43 +863,43 @@ class OOBibStyleTest {
         if (true) {
             List<CitationMarkerEntry> citationMarkerEntries = new ArrayList<>();
             CitationMarkerEntry cm1 =
-                makeCitationMarkerEntry(entry1, database, "a", "p1", false);
+                    makeCitationMarkerEntry(entry1, database, "a", "p1", false);
             citationMarkerEntries.add(cm1);
             CitationMarkerEntry cm2 =
-                makeCitationMarkerEntry(entry1, database, "a", "p1", false);
+                    makeCitationMarkerEntry(entry1, database, "a", "p1", false);
             citationMarkerEntries.add(cm2);
             CitationMarkerEntry cm3 =
-                makeCitationMarkerEntry(entry1, database, "a", "p1", false);
+                    makeCitationMarkerEntry(entry1, database, "a", "p1", false);
             citationMarkerEntries.add(cm3);
 
             assertEquals("[Boström et al., 2006a; p1]",
-                         style.createCitationMarker(citationMarkerEntries,
-                                                    true,
-                                                    NonUniqueCitationMarker.THROWS).toString());
+                    style.createCitationMarker(citationMarkerEntries,
+                            true,
+                            NonUniqueCitationMarker.THROWS).toString());
         }
         // With pageInfo: same entries with different pageInfo: kept separate.
         // Empty ("") and missing pageInfos considered equal, thus collapsed.
         if (true) {
             List<CitationMarkerEntry> citationMarkerEntries = new ArrayList<>();
             CitationMarkerEntry cm1 =
-                makeCitationMarkerEntry(entry1, database, "a", "p1", false);
+                    makeCitationMarkerEntry(entry1, database, "a", "p1", false);
             citationMarkerEntries.add(cm1);
             CitationMarkerEntry cm2 =
-                makeCitationMarkerEntry(entry1, database, "a", "p2", false);
+                    makeCitationMarkerEntry(entry1, database, "a", "p2", false);
             citationMarkerEntries.add(cm2);
             CitationMarkerEntry cm3 =
-                makeCitationMarkerEntry(entry1, database, "a", "", false);
+                    makeCitationMarkerEntry(entry1, database, "a", "", false);
             citationMarkerEntries.add(cm3);
             CitationMarkerEntry cm4 =
-                makeCitationMarkerEntry(entry1, database, "a", null, false);
+                    makeCitationMarkerEntry(entry1, database, "a", null, false);
             citationMarkerEntries.add(cm4);
 
             assertEquals("[Boström et al., 2006a; p1"
-                         + "; Boström et al., 2006a; p2"
-                         + "; Boström et al., 2006a]",
-                         style.createCitationMarker(citationMarkerEntries,
-                                                    true,
-                                                    NonUniqueCitationMarker.THROWS).toString());
+                            + "; Boström et al., 2006a; p2"
+                            + "; Boström et al., 2006a]",
+                    style.createCitationMarker(citationMarkerEntries,
+                            true,
+                            NonUniqueCitationMarker.THROWS).toString());
         }
     }
 }
